[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rulesync"
version = "1.0.0"
description = "One source of truth for all your AI coding agent rule files. Sync AGENTS.md, CLAUDE.md, .cursorrules, copilot-instructions.md, GEMINI.md, and .windsurfrules from a single canonical file."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Linda Oraegbunam" }]
keywords = [
    "agents-md", "claude-md", "cursorrules", "copilot", "gemini",
    "windsurf", "ai-coding", "llm", "developer-tools", "claude-code",
    "cursor", "github-copilot", "opencode", "aider", "agentsync",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    
    "Topic :: Utilities",
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
rulesync = "agentsync.cli:main"

[project.urls]
Homepage = "https://github.com/obielin/agentsync"
"Bug Tracker" = "https://github.com/obielin/agentsync/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
